--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
     <link rel="stylesheet" href="/Content/css/styles.css" type="text/css">
-    <title>Hospital</title>
+    <title>Band Tracker</title>
   </head>
   <body>
     <h1 class="text-center jumbotron" id='header'>Band Tracker</h1>
