--- a/Views/form.cshtml
+++ b/Views/form.cshtml
@@ -3,8 +3,8 @@
 }
 
 <h2 class="text-center">Add new venue</h2>
-<div class="col-sm-"6>
-  <form action="venues/new" method="post">
+<div class="col-sm-6">
+  <form action="/venues/new" method="post">
     <div class="form-group">
       <label>Venue's Name:</label>
       <input type="text" name="name" class="form-control" required>
@@ -12,17 +12,21 @@
     <div class="form-group">
       <label>Bands:</label>
       <select name="band" class="form-control">
-        <option value="b"></option>
-        @if(@Model["bands"].Count > 0)
+        <option value=""></option>
+        @if(@Model["bands"].Count != 0)
         {
           @foreach(var band in @Model["bands"])
           {
-            <option value="band.Id">@band.Name</option>
+            <option value="@band.Id">@band.Name</option>
           }
         }
       </select>
+      <div class="form-group">
+        <label>Date:</label>
+        <input type="date" name="date" class="form-control" required>
+      </div>
     </div>
-    <button type="submit" class="btn btn-info">Create appointment</button>
+    <button type="submit" class="btn btn-info">Add venue</button>
   </form>
 </div>
 <div class="col-sm-6">
