add front-end to show events that belongs to venue

--- a/Views/form.cshtml
+++ b/Views/form.cshtml
@@ -1,7 +1,7 @@
 @{
   Layout = "Shared/_Layout.cshtml";
 }
-
+<a href="/">Home page</a>
 <h2 class="text-center">Add new venue</h2>
 <div class="col-sm-6">
   <form action="/venues/new" method="post">
