add front-end to updated results

--- a/Views/update_form.cshtml
+++ b/Views/update_form.cshtml
@@ -1,21 +1,35 @@
 @{
   Layout = "Shared/_Layout.cshtml";
 }
-<div class="row">
-  <h2>@Model["venue"].Name</h2>
-  <form class="" action="/venues/{id}/update" method="post">
-    <input type="hidden" name="_method" value="PATCH">
-    <div class="form-group">
-      <label>Venue Name</label>
-      <input class="form-control" type="text" name="name" value="@Model["venue"].Name" required>
-    </div>
-    <ul>
-      <h3>Please check band which you want add or delete</h3>
+<a href="/">Home page</a>
+@if(@Model["show"] == "update-form")
+{
+  <div class="row">
+    <h2>@Model["venue"].Name</h2>
+    <form action="/venues/{id}/update" method="post">
+      <input type="hidden" name="_method" value="PATCH">
+      <div class="form-group">
+        <label>Venue Name</label>
+        <input class="form-control" type="text" name="name" value='@Model["venue"].Name' required>
+      </div>
+      <h3>Please check band which you want to delete</h3>
+      <ul>
+        @foreach(var band in @Model["bands"])
+        {
+          <h4><input type="checkbox" name="band" value="@band.Id"> Band: @band.Name</h4>
+        }
+      </ul>
+    </form>
+    <button class="btn btn-danger" type="submit" name="button">Update</button>
+  </div>
+}
+  <div class="row">
+    @if(@Model["show"] == "update-info")
+    {
+      <h3>Profile venue @Model["venue"].Name was updated successfully</h3>
       @foreach(var band in @Model["bands"])
       {
-        <h4><input type="checkbox" name="band" value="@band.Id"> Band: @band.Name</h4>
+        <h4>Band: @band.Name</h4>
       }
-    </ul>
-  </form>
-  <button type="submit" name="button">Update</button>
-</div>
+    }
+  </div>
