--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -27,7 +27,7 @@
     {
       @foreach(var band in @Model["allBands"])
       {
-        <h3><a href="/band/@band.Id">@band.Name</a></h3>
+        <h4>@band.Name</a></h4>
       }
     }
   </div>
