--- a/Views/form.cshtml
+++ b/Views/form.cshtml
@@ -12,6 +12,10 @@
         <input type="text" name="name" class="form-control" required>
       </div>
       <div class="form-group">
+        <label>Venue's Name:</label>
+        <input type="number" name="capacity" class="form-control" required>
+      </div>
+      <div class="form-group">
         <label>Bands:</label>
         <select name="band" class="form-control">
           <option value=""></option>
