--- a/Views/form.cshtml
+++ b/Views/form.cshtml
@@ -12,7 +12,7 @@
         <input type="text" name="name" class="form-control" required>
       </div>
       <div class="form-group">
-        <label>Venue's Name:</label>
+        <label>capacity:</label>
         <input type="number" name="capacity" class="form-control" required>
       </div>
       <div class="form-group">
@@ -35,13 +35,13 @@
       <button type="submit" class="btn btn-info">Add venue</button>
     </form>
   </div>
-  <div class="col-sm-6">
-    @if(@Model.ContainsKey("new-venue"))
-    {
-      <h3>@Model["new-venue"].Name have been added successfully!</h3>
-    }
-  </div>
 }
+<div class="col-sm-6">
+  @if(@Model.ContainsKey("new-venue"))
+  {
+    <h3>@Model["new-venue"].Name have been added successfully!</h3>
+  }
+</div>
 
 @if(@Model.ContainsKey("new-band"))
 {
