--- a/Views/update_form.cshtml
+++ b/Views/update_form.cshtml
@@ -22,7 +22,7 @@
         </div>
         <div class="col-md-6">
           <h3>Add Band</h3>
-            @foreach(var band in @Model["bands"])
+            @foreach(var band in @Model["otherBands"])
             {
               <h4><input type="checkbox" name="band" value="@band.Id">@band.Name</h4>
             }
